# fake-news-classification

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  app.py  cloudbuild.yaml  config_cpu.yaml  data.dvc  index.html  inference.dockerfile  main.py  make_dataset.py  model.py  predict.dockerfile  preprocessing.py  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: codecheck.yaml  deploy_docs.yaml  docker-image.yml  dvc_workflow.yml  tests.yaml
attic/: bert_handler.py  transform_model.py
ci/: index.html
config/: cloudbuild.yaml  cloudbuild_backend.yaml  cloudbuild_frontend.yaml  cloudbuild_monitoring.yaml  config.yaml  config_cpu.yaml  sweep.yaml
config/cloud/: cloud.yaml
config/distillation/: distillation.yaml
config/eval/: eval.yaml
config/main/: main.yaml
config/model/: model.yaml
config/predict/: predict.yaml
config/preprocess/: preprocess.yaml
config/train/: train.yaml
docker/: backend.dockerfile  frontend.dockerfile  index.html  monitoring.dockerfile  predict.dockerfile  predict_local.dockerfile  trainer.dockerfile  trainer_local.dockerfile
docs/: README.md  mkdocs.yml
docs/docs/: ci.md  docker.md  dvc.md  index.md  inference.md  makefile.md  monitoring.md  my_api.md  run_local.md  scalable_applications.md  setup.md
fakenews/: __init__.py  config.py  dataset.py  features.py  plots.py
fakenews/app/: frontend.py  inference_app.py  monitoring_app.py
fakenews/data/: data_generator.py  make_dataset.py  preprocessing.py
fakenews/inference/: distillation.py  missing_keys.csv  missing_keys_old.csv  predict.py  quantitization.py  unexpected_keys.csv  unexpected_keys_old.csv
fakenews/model/: distillation_model.py  distillation_training.py  model.py  predict.py  train_model.py  wandb_registry.py
fakenews/modeling/: predict.py  train.py
fakenews/models/: evaluate.py  main.py  model.py  predict.py  train.py
fakenews/monitoring/: data_drift.py
fakenews/visualizations/: plots.py
getting-started/: index.html
notebooks/: descriptives.ipynb  distillation.ipynb  predictions.ipynb  quantization.ipynb
reports/: README.md  README_report.md  report.html  report.py  test.py
reports/monitoring/: data_drift_tests.html  text_drift_metrics.html
run_local/: index.html
search/: search_index.json
setup/: index.html
tests/: test_data.py  test_model.py  test_train.py
tests/integrationtests/: test_apis.py  (+2 more)
(+5 files in other folders)
