[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fakenews"
version = "0.0.1"
description = "This project is part of the fullfilment for the lecture \"ML Operations\" from LMU and covers the whole deployment lifecycle of a deep learning project. Here we deploy a model for fake news classification."
authors = [
  { name = "Anne Gritto, Tobias Brock, Stefanie Schwarz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["fakenews"]
force_sort_within_sections = true
