[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fakenews"
version = "0.0.1"
description = "This project is part of the fullfilment for the lecture \"ML Operations\" from LMU and covers the whole deployment lifecycle of a deep learning project. Here we deploy a model for fake news classification."
authors = [
  { name = "Anne Gritto, Tobias Brock, Stefanie Schwarz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude=[
  ".git",
  ".ruff_cache",
  ".pt",
]

# Include Notebooks
extend-include = ["*.ipynb"]

line-length=120 # if recommended length (79 characters) is too restrictive

[tool.ruff.lint]
# Enable Pyflakes, isort (order imports), NumPy specific rules, auch Pydocstyle?
select = ["F", "I", "NPY"]  # order import statements

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["fakenews"]
force-sort-within-sections = true
